--- a/test-output/index.html
+++ b/test-output/index.html
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ibhs.test.user.TestNewPatients" hash-for-method="verifySSNErrorRequired_Test_1_7">verifySSNErrorRequired_Test_1_7</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ibhs.test.user.TestNewPatients" hash-for-method="verify">verify</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -124,9 +124,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifySSNErrorRequired_Test_1_7">
-                  </a> <!-- verifySSNErrorRequired_Test_1_7 -->
-                  <span class="method-name">verifySSNErrorRequired_Test_1_7</span>
+                  <a name="verify">
+                  </a> <!-- verify -->
+                  <span class="method-name">verify</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -134,7 +134,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/tmp/testng-eclipse--1212631804/testng-customsuite.xml</span>
+            <span class="header-content">/tmp/testng-eclipse-369133048/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;com.ibhs.test.user.TestNewPatients&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;verifySSNErrorRequired_Test_1_7&quot;/&gt;
+          &lt;include name=&quot;verify&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- com.ibhs.test.user.TestNewPatients --&gt;
     &lt;/classes&gt;
@@ -189,14 +189,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifySSNErrorRequired_Test_1_7')
+data.setCell(0, 1, 'verify')
 data.setCell(0, 2, 'com.ibhs.test.user.TestNewPatients')
-data.setCell(0, 3, 21639);
+data.setCell(0, 3, 47046);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 21 seconds</span>
+              <span class="suite-total-time">Total running time: 47 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,7 +219,7 @@ return data;
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">verifyDOBViaDatePickerEntryValidNumbers_Test_1_6</span>
                 <br/>
-                <span class="ignored-method-name">verify</span>
+                <span class="ignored-method-name">verifySSNErrorRequired_Test_1_7</span>
                 <br/>
                 <span class="ignored-method-name">verifyDOBErrorRequiredViaDatePicker_Test_1_5</span>
                 <br/>
@@ -227,9 +227,9 @@ return data;
                 <br/>
                 <span class="ignored-method-name">verifyDOBWithManualEntryValidNumbers_Test_1_4</span>
                 <br/>
-                <span class="ignored-method-name">verifySSNWithValidNumbersFormPatientOnNewPatientPage_Test_1_5</span>
-                <br/>
                 <span class="ignored-method-name">verifyNumberErrorsRequiredForEmptyFields_1_1</span>
+                <br/>
+                <span class="ignored-method-name">verifySSNWithValidNumbers_Test_1_8</span>
                 <br/>
                 <span class="ignored-method-name">verifyErrorsRequiredForEmptyFields_1_2</span>
                 <br/>
@@ -249,12 +249,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">verifySSNErrorRequired_Test_1_7</span>
-                <span class="method-start">20825 ms</span>
+                <span class="method-name">verify</span>
+                <span class="method-start">14192 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">42465 ms</span>
+                <span class="method-start">61238 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
